padding-bottom: 10px; for all pages (fix cutoff)

--- a/web/bundles/app/css/index.css
+++ b/web/bundles/app/css/index.css
@@ -81,6 +81,7 @@ body {
 .content {
     font-size: 20px;
     height: 100%;
+    padding-bottom: 10px;
 }
 
 .ui-effects-wrapper {
